--- a/VerificationEvaluator/.classpath
+++ b/VerificationEvaluator/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="lib/com.microsoft.z3.jar" sourcepath="C:/Users/skingFD/.m2/repository/com/microsoft/z3/z3/4.8.4/z3-4.8.4-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
