--- a/VerificationEvaluator/.classpath
+++ b/VerificationEvaluator/.classpath
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="lib/com.microsoft.z3.jar" sourcepath="C:/Users/skingFD/.m2/repository/com/microsoft/z3/z3/4.8.4/z3-4.8.4-sources.jar"/>
+	<classpathentry kind="lib" path="lib/com.microsoft.z3.jar" sourcepath="C:/Users/skingFD/.m2/repository/com/microsoft/z3/z3/4.8.4/z3-4.8.4-sources.jar"/>
+	<classpathentry kind="lib" path="lib/LightBDD.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
